force-app/main/default/objects/Designation__c/Designation__c.object-meta.xml
<CustomObject>
    <description>Designations and title awarded</description>
    <label>Designation</label>
    <nameField>
        <displayFormat>DG-{0000}</displayFormat>
        <label>Designation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Designations</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>