force-app/main/default/objects/Designation__c/fields/Designation__c.field-meta.xml
<CustomField>
    <fullName>Designation__c</fullName>
    <description>Additional designations the Referee holds with USRowing</description>
    <inlineHelpText>Additional designations the Referee holds with USRowing</inlineHelpText>
    <label>Designation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assistant Referee</fullName>
            </value>
            <value>
                <fullName>Full Referee</fullName>
                <label>Referee</label>
            </value>
            <value>
                <fullName>Chief Referee</fullName>
            </value>
            <value>
                <fullName>Emeritus</fullName>
            </value>
            <value>
                <fullName>FISA</fullName>
            </value>
            <value>
                <fullName>Clinician</fullName>
            </value>
            <value>
                <fullName>Mentor</fullName>
            </value>
            <value>
                <fullName>Referee College Faculty</fullName>
            </value>
            <value>
                <fullName>Referee Committee</fullName>
            </value>
            <value>
                <fullName>Regional Coordinator</fullName>
            </value>
            <value>
                <fullName>Staff</fullName>
            </value>
            <value>
                <fullName>Candidate Referee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>