force-app/main/default/objects/Designation__c/fields/Designation_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Designation_End_Date__c</fullName>
    <description>End date for the designation. For Clinician Designation, create a new record if there is a gap in service.</description>
    <inlineHelpText>End date for the designation. For Clinician Designation, create a new record if there is a gap in service.</inlineHelpText>
    <label>Designation End Date</label>
    <type>Date</type>
</CustomField>