force-app/main/default/objects/Designation__c/fields/Designation_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Designation_Start_Date__c</fullName>
    <description>Date designation was recorded</description>
    <inlineHelpText>Date designation was recorded</inlineHelpText>
    <label>Designation Start Date</label>
    <type>Date</type>
</CustomField>