force-app/main/default/objects/Designation__c/fields/Designee__c.field-meta.xml
<CustomField>
    <fullName>Designee__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Person awarded the designation</description>
    <inlineHelpText>Person awarded the designation</inlineHelpText>
    <label>Designee</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Designations</relationshipLabel>
    <relationshipName>Designations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>