force-app/main/default/objects/Designation__c/fields/Designee_User__c.field-meta.xml
<CustomField>
    <fullName>Designee_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Person awarded the designation</description>
    <inlineHelpText>Person awarded the designation</inlineHelpText>
    <label>Designee User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Designations</relationshipName>
    <type>Lookup</type>
</CustomField>