force-app/main/default/objects/Designation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Designee__c</columns>
    <columns>Designation__c</columns>
    <columns>Designation_Start_Date__c</columns>
    <columns>Designation_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>