force-app/main/default/objects/Designation__c/listViews/Clinicians.listView-meta.xml
<ListView>
    <fullName>Clinicians</fullName>
    <columns>Designation_Start_Date__c</columns>
    <columns>Designation__c</columns>
    <columns>Designee_User__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Designation__c</field>
        <operation>equals</operation>
        <value>Clinician</value>
    </filters>
    <label>Clinicians</label>
</ListView>